# ticktrack

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-latest.yaml  build-release-tag.yaml
config/: default.yaml
src/ticktrack/: __main__.py  config.py  datalog.py  model.py  request.py  response.py  triasxml.py  worker.py
